src/layouts/ListingPageLayout/styles.module.css
.navigation-tabs {
  display: flex;
  gap: 38px;
  justify-content: start;
  padding-left: 20vw;
  margin-top: 14px;
  position: -webkit-sticky;
  position: sticky;
  min-height: 40px;
}
.navigation-tabs a {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 16px;
  color: #939ca3;
  padding: 10px 5px;
  position: relative;
  min-width: 90px;
  text-align: center;
}
.navigation-tabs a:hover {
  color: #8064a2;
}
.navigation-tabs a.active {
  color: #8064a2;
  font-weight: 600;
}
.navigation-tabs a.active::after {
  content: '';
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  position: absolute;
  background: #8064a2;
  border-radius: 2px 2px 0px 0px;
}
.nav-mobile {
  display: none;
}

.display-mobile {
  display: none !important;
}
.display-flex-mobile {
  display: none !important;
}

.rotate-180 {
  transform: rotate(180deg) scale(1.5);
}
.rotate-0 {
  transform: rotate(0deg) scale(1.5);
}

.expand-all {
  display: none;
}
.expand-all > img {
  aspect-ratio: 1;
}
.expand-all > p {
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
}
.listing-page-type-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 13px;
  align-items: center;
  padding: var(--spacing-8) var(--spacing-16);
  border-radius: 8px;
  border: 1px solid #ebedf0;
  max-width: 100%;
  width: 100%;
}

.listing-page-type-wrapper > div {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}
.listing-page-type-wrapper > div > p {
  color: rgba(0, 150, 200, 1);
  font-weight: 600;
  line-height: 20px;
  font-size: 14px;
}

.expand-all-page-type-wrapper {
  display: flex;
  flex-direction: row;
  gap: 10px;
  justify-content: space-between;
  align-items: center;
  margin: 0 1.1rem 15px;
}

.about-text {
  margin: 0;
}

.about-text ol,
.about-text ul {
  padding-left: 1rem;
}

.textGray {
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.04em;
  color: #939ca3;
  margin: 8px 0;
}
.disabledtab{
  cursor: default;
}

@media screen and (max-width: 1100px) {
  .other-data-wrapper-mobile {
    display: flex !important;
    flex-direction: column;
    margin: 16px 0 0 0;
  }

  .expand-all-page-type-wrapper{
    margin-bottom: 12px;
  }

  .nav {
    display: none;
  }
  .nav-mobile {
    display: flex;
    background-color: #ffffff;
  }
  .navigation-tabs {
    gap: 16px;
    justify-content: flex-start;
    overflow-x: auto;
    width: 100%;
    flex-shrink: 0;
    padding: 0 16px;
    padding-left: 16px;
  }
  .navigation-tabs > a {
    flex-shrink: 0;
  }
  .navigation-tabs a {
    min-width: 50px;
    font-size: 12px;
    padding: 10px 0;
  }

  .display-mobile {
    display: initial !important;
  }
  .display-flex-mobile {
    display: flex !important;
  }
  .display-mobile-main {
    height: 90vh;
  }

  .expand-all {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 5px;
    min-width: fit-content;
    margin-left: auto;
  }
  .about-text > p {
    padding: 10px 0 0 0;
  }
  .mobile-mt-0{
    margin-top: 0;
  }
}
.customSnackbar {
  border-radius: 8px;
  border: 1px solid var(--red-lighter, #ffbec0);
}
.customSnackbarContent {
  background-color: #ffd6e0;
  border-radius: 12px;
  display: flex;
  align-items: center;
  padding: 8px 16px;
}

.customSnackbarContent .message {
  display: flex;
  align-items: center;
  color: var(--grey-darker, #6d747a);
  font-weight: 500;
  margin-right: 12px;
}

.customSnackbarContent .CloseIcon {
  color: #6d747a;
}

@media screen and (max-width: 400px) {
  .listing-page-type-wrapper {
    gap: 5px;
    width: 100%;
    padding: var(--spacing-8);
  }
  .listing-page-type-wrapper > div {
    gap: 2px;
  }
}


@media screen and (min-width:1440px) {
  .navigation-tabs{
    padding-left: calc(50vw - 720px + 288px);
  }
}

